[build-system]
requires = ["setuptools>=68.2.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easier-docker"
version = "2.2.7"
description = "Configure your container image information more easily in python, allowing the container in docker to execute the configured program you want to execute."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache License 2.0"}
authors = [
    {name = "EnSong Wei", email = "touer0018@gmail.com"}
]
keywords = ["easy","docker","python","docker sdk","python sdk"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "docker~=7.1.0",
    "PyYAML~=6.0.1",
]

[project.optional-dependencies]
dev = [
    "twine~=4.0.2",
    "build~=1.2",
    "pytest~=8.3",
    "pytest-cov~=5.0",
]

[project.urls]
Homepage = "https://github.com/touero/easier-docker"
"Bug Reports" = "https://github.com/touero/easier-docker/issues"
Source = "https://github.com/touero/easier-docker"

[project.scripts]
easier-docker = "easierdocker.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=src/easierdocker --cov-branch --cov-report=term-missing"
